# Knowte

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  Roadmap  index.html  package.json  plan.md
.github/workflows/: deploy-landing.yml  release.yml
docs/: CHANGELOG.md  plan.md
landing/: index.html
landing/assets/: main.js  output.css
landing/src/: input.css
scripts/: tauri-safe.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/ffmpeg/: README.md
src-tauri/resources/ffmpeg/linux/: ffmpeg
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  library.rs  llm.rs  mod.rs  pipeline.rs  research.rs  settings.rs  transcribe.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pipeline/: orchestrator.rs
src-tauri/src/utils/: anki_export.rs  ffmpeg.rs  mod.rs  prompt_templates.rs  ytdlp.rs
src/components/: Sidebar.tsx  index.ts
src/components/ErrorBoundary/: AppErrorBoundary.tsx  index.ts
src/components/Explain/: ExplainPanel.tsx  ExplainableTextView.tsx  TextSelectionToolbar.tsx
src/components/Flashcards/: AnkiExport.tsx  index.ts  (+1 more)
src/hooks/: index.ts  useHotkeys.ts
src/lib/: constants.ts  generatedContent.ts  hotkeys.ts  index.ts  tauriApi.ts  types.ts
src/pages/: Compare.tsx  Flashcards.tsx  Library.tsx  MindMap.tsx  Notes.tsx  Pipeline.tsx  Quiz.tsx  Research.tsx  Settings.tsx  Transcript.tsx  Upload.tsx  index.ts
src/stores/: index.ts  lectureStore.ts  pipelineStore.ts  settingsStore.ts  toastStore.ts  uiStore.ts
(+33 files in other folders)
