[package]
name = "cognote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cognote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
dirs = "6"
cpal = "0.15"
hound = "3.5"
rfd = "0.15"
symphonia = { version = "0.5", features = ["isomp4", "aac", "alac", "mp3", "wav", "ogg", "vorbis", "pcm"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
whisper-rs = "0.15"
rubato = "0.16"
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util"] }
